--- a/src/appp.css
+++ b/src/appp.css
@@ -1,28 +1,34 @@
+.appp {
+  background-image: url(./background.jpg);
+  background-size: cover; 
+  position: relative; 
+  z-index: 1; 
+  height: 100vh;
+}
 
 .app {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh; 
-  background-image: url('./background.jpg'); 
-  background-size: cover; 
+  height: 100vh;
+  background-image: url('./background.jpg');
+  background-size: cover;
 }
 
 .glasses-container {
   display: flex;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
   justify-content: center;
 }
 
-
 .glasses-item {
-  margin: 10px; 
+  margin: 10px;
 }
 
 .glasses-item img {
   width: 100px;
   height: auto;
-  cursor: pointer; 
+  cursor: pointer;
 }
 
 .face-container {
@@ -35,9 +41,9 @@
 }
 
 .glasses-image {
-  position: absolute; 
-  top: 50%; 
-  left: 50%; 
+  position: absolute;
+  top: 35%;
+  left: 50%;
   transform: translate(-50%, -50%);
-  pointer-events: none; 
+  pointer-events: none;
 }
